[package]
name = "blockchain_node"
version = "0.1.0"
edition = "2021"


[dependencies]
sha2="0.9.0"
rand="0.8.0"
borsh = "0.9.1"
actix-web = "3"
futures = "0.3"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
actix-service = "1.0.0"

[dev-dependencies]
actix-rt = "1"